@@ -64,6 +64,8 @@ C. Translate to Russian everything
 14. Sample for SubData()+Evaluate() + update difference of SubData and Evaluate
 15. Doc about SetFaceNum() -- check if present
 16. Text style 'T' into "Font style" and "Text printing"
+17. Global spline sample (m.b. howto about interpolation)?!!
+18. Docs about mgl_gspline_init(), mgl_gspline() and mgl_gsplinec_init(), mgl_gsplinec().
 
 29. Howto about plot ranges (subplot styles)
 
